2026-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Fix truncated diagnostic messages caused by macro
	programmer forgetting to name the string to which the `as`
	request is meant to append.
	(MULN): Fix truncated fatal error diagnostic arising from
	disordered internal state when an undefined column width is
	encountered when using groff mm's extended multi-column layout
	feature.
	(ML): Fix truncated error diagnostic when 2nd argument to macro
	is not numeric.

2026-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (li@pop): When popping a nested list level, restore
	attribute saved in `li*mark-list!n` array to module-local string
	`li*mf`, not `li*mark`; the distinction matters when lists of
	type "zero" are nested, in practice that value describes only
	marked item (`ML`) lists.

	Fixes <https://savannah.gnu.org/bugs/?68052>.  Problem
	introduced by me in commit d9209295a3, 9 October 2024.  Thanks
	to Alexis Hildebrandt for the report.  The commit characterized
	itself as a "trivial refactoring": "Rename internal string
	`li*mark` to `li*mf`, since it can be _either_ an arbitrary
	string _or_ an argument to the `af` request."  I'd characterize
	the root cause of this problem as follows.  The `LB` macro's
	optional fifth argument is the *roff equivalent of an untagged
	union per the foregoing.  (But we're stuck with it because it's
	a DWB 3.3 [or earlier] mm feature.)  When a list nesting level
	is popped, we don't recover all of the information that the `LB`
	macro's internals computed; instead we rely on stashing some.
	When renaming `li*mf` to `li*mark`, I did not realize that this
	stashing logic needed to save the pre-interpretation form of the
	"mark-or-list" argument, not a post-interpretation,
	unambiguously typed string to use as the item mark.  A better
	implementation of `LB` would stash as many distinct, and
	unambiguously typed, data as warranted to recover necessary